# code-review.ai

./: .env.example  .gitignore  INSTRUCTIONS.md  README.md  SECURITY.md
.github/workflows/: backend-ci.yml  docker-publish.yml  frontend-ci.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_schema.py  0002_add_sonar_fields_to_reviews.py  0003_add_notifications_table.py
apps/backend/app/: main.py
apps/backend/app/api/: deps.py
apps/backend/app/api/routes/: auth.py  notifications.py  pull_requests.py  repositories.py  users.py  webhooks.py
apps/backend/app/core/: config.py  logging.py  metrics.py  rate_limit.py  security.py
apps/backend/app/db/: base.py
apps/backend/app/models/: notification.py  pull_request.py  repository.py  review.py  user.py
apps/backend/app/schemas/: auth.py  generation.py  notification.py  pull_request.py  repository.py  review.py
apps/backend/app/services/: ai_generate.py  ai_review.py  github_api.py  github_app.py  notifications.py  rag.py  review_comment.py  sonar.py  task_log.py
apps/backend/app/workers/: celery_app.py  tasks.py
apps/backend/scripts/: load_test_webhooks.py
apps/backend/tests/: test_auth_callback.py  test_notifications.py  test_pull_request_logs.py  test_rate_limit.py  test_security.py  test_sonar_secrets.py  test_webhook_signature.py
apps/frontend/: .env.local.example  Dockerfile.prod  next.config.ts  package-lock.json
infra/docker/: docker-compose.yml
infra/k8s/: README.md  kind-config.yaml
infra/terraform/: README.md
(+32 files in other folders)
